--- a/config.yml
+++ b/config.yml
@@ -1,1 +1,5 @@
-
+title: Sheraz SEO Specialist
+#logo
+description: SEO Specialist - Digital Marketing Manager
+#show_downloads: true
+theme: jekyll-theme-minimal
